# browserlane

./: .gitignore  AGENTS.md  CLI-TEST-PLAN.md  CNAME  CONTRIBUTING.md  Cargo.toml  MANUAL-TEST.md  NOTICE  README.md  index.html  install.ps1  install.sh
.claude/: launch.json
.github/: SECURITY.md
.github/workflows/: build.yml  release.yml
scripts/: cli-smoke.sh
site/: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/: hero.tsx  logo.tsx  newsletter-form.tsx  observability.tsx  quickstart.tsx  site-footer.tsx  site-nav.tsx  trust-strip.tsx  two-surfaces.tsx
site/lib/: confirm-token.ts  github.ts
site/scripts/: sync-install-scripts.mjs
src/: main.rs  tests.rs
src/agent/: handlers.rs  mod.rs  schema.rs  server.rs
src/api/: actionability.rs  clock_script.rs  handlers_a11y.rs  handlers_capture.rs  handlers_clock.rs  handlers_dialog.rs  handlers_download.rs  handlers_elements.rs  handlers_emulation.rs  handlers_frames.rs  handlers_input.rs  handlers_interaction.rs  handlers_lifecycle.rs  handlers_navigation.rs  handlers_network.rs  handlers_recording.rs  handlers_state.rs  handlers_storage.rs  handlers_websocket.rs  helpers.rs  mod.rs  pipe.rs  recording.rs  router.rs  server.rs  session.rs
src/bidi/: browsingcontext.rs  connect.rs  connection.rs  input.rs  mod.rs  protocol.rs  script.rs  session.rs  storage.rs
src/browser/: installer.rs  launcher.rs  launcher_unix.rs  launcher_windows.rs  mod.rs
src/cmd/: SKILL.md  a11y_tree.rs  attr.rs  back.rs  category.rs  check_cmd.rs  click.rs  completion.rs  content.rs  cookies.rs  count.rs  daemon_client.rs  daemon_cmd.rs  daemon_unix.rs  daemon_windows.rs  dashboard.rs  dblclick.rs  diagnostics.rs  dial_unix.rs  dial_windows.rs  dialog.rs  diff.rs  download.rs  drag.rs  dump.rs  eval.rs  examples.rs  expect.rs  fill.rs  find.rs  focus.rs  forward.rs  frame.rs  frames.rs  geolocation.rs  help.rs  help_text.rs  helpers.rs  highlight.rs  hover.rs  (+39 more)
src/daemon/: client.rs  daemon.rs  dial_unix.rs  dial_windows.rs  listener_unix.rs  listener_windows.rs  mod.rs  pidfile.rs  process_unix.rs  process_windows.rs  router.rs  status.rs
src/errors/: errors.rs  mod.rs
src/ext/: add_mcp.rs  cli.rs  mcp.rs  mod.rs  uninstall.rs  update.rs
src/log/: log.rs  mod.rs
src/paths/: mod.rs  paths.rs
src/process/: mod.rs  process.rs  process_unix.rs  process_windows.rs
src/snapshots/: bl__tests__snapshots__cmd_a11y-tree.snap  bl__tests__snapshots__cmd_add-mcp.snap  bl__tests__snapshots__cmd_add-skill.snap  bl__tests__snapshots__cmd_attr.snap  bl__tests__snapshots__cmd_back.snap  bl__tests__snapshots__cmd_bidi-test.snap  bl__tests__snapshots__cmd_check.snap  bl__tests__snapshots__cmd_click.snap  bl__tests__snapshots__cmd_completion.snap  bl__tests__snapshots__cmd_content.snap  bl__tests__snapshots__cmd_cookies.snap  bl__tests__snapshots__cmd_cookies__clear.snap  bl__tests__snapshots__cmd_count.snap  bl__tests__snapshots__cmd_daemon.snap  bl__tests__snapshots__cmd_daemon__start.snap  bl__tests__snapshots__cmd_daemon__status.snap  bl__tests__snapshots__cmd_daemon__stop.snap  bl__tests__snapshots__cmd_dblclick.snap  bl__tests__snapshots__cmd_dialog.snap  bl__tests__snapshots__cmd_dialog__accept.snap  bl__tests__snapshots__cmd_dialog__dismiss.snap  bl__tests__snapshots__cmd_diff.snap  bl__tests__snapshots__cmd_diff__map.snap  bl__tests__snapshots__cmd_download.snap  bl__tests__snapshots__cmd_download__dir.snap  bl__tests__snapshots__cmd_drag.snap  bl__tests__snapshots__cmd_eval.snap  bl__tests__snapshots__cmd_expect.snap  bl__tests__snapshots__cmd_expect__checked.snap  bl__tests__snapshots__cmd_expect__count.snap  bl__tests__snapshots__cmd_expect__enabled.snap  bl__tests__snapshots__cmd_expect__hidden.snap  bl__tests__snapshots__cmd_expect__js.snap  bl__tests__snapshots__cmd_expect__text.snap  bl__tests__snapshots__cmd_expect__title.snap  bl__tests__snapshots__cmd_expect__url.snap  bl__tests__snapshots__cmd_expect__value.snap  (+84 more)
website/: .gitignore  DEPLOY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
website/app/: global.css  (+7 more)
(+136 files in other folders)
